# rust_image_to_ascii

./: .gitignore  Cargo.toml  README.md
src/: main.rs
