[package]
name = "rust_to_ascii"
version = "0.1.0"
authors = ["Rurigk <rurigk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.12"
futures = { version = "0.3.*" }
tokio = {version = "0.2.*", features = ["full"] }